[package]
name = "ap-outbox2bsky-post"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atrium-api = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
async-trait = "0.1"
clap = { version = "4.3", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
html5ever = "0.26"
file-lock = "2.1"
bytes = "1.4"
activitist = "0.4"

[[bin]]
name = "ap-outbox2bsky-post"
